implemented the control panel